--- a/style.css
+++ b/style.css
@@ -1,17 +1,25 @@
 *, body {
   padding: 0px;
   margin: 0px;
+  font-family: 'Roboto Slab', serif;
 }
 
 #app {
   margin: auto;
   width: 600px;
-  background-color: grey;
+  background-color: #f5f5f5;
   min-height: 200px;
+  border: 1px #eee solid;
+  border-radius: 5px;
+  margin-top: 40px;
+  padding: 10px;
 }
 
 h1 {
-  padding: 10px 0px;
+  padding: 5px 0px;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 15px;
 }
 
 .left {
@@ -23,22 +31,21 @@ h1 {
 }
 
 .side {
-  background: red;
   width: 40%;
-  padding: 0px 2.5%;
+  padding: 10px 2.5%;
 }
 
 .side > input {
   padding: 5px;
   background: white;
-  /*border-radius: 2px;*/
+  border-radius: 3px;
   border: 1px solid #eee;
   margin: 2.5px;
-  /*border: none;*/
 }
 
 .side.better {
-  background: green;
+  background: #bfd6b4;
+  border-radius: 5px
 }
 
 input:focus {
@@ -48,13 +55,13 @@ input:focus {
 .middle {
   width: 10%;
   text-align: center;
-  padding-top: 10px;
+  padding-top: 30px;
   margin: auto;
 }
 
 .result {
   text-align: center;
-  padding: 5px;
+  padding: 15px 0px;
   border-top: 1px solid #eee;
-  margin-top: 5px;
+  margin-top: 25px;
 }
