--- a/style.css
+++ b/style.css
@@ -22,6 +22,14 @@ h1 {
   margin-bottom: 15px;
 }
 
+p {
+  padding: 0px 20px;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+  font-size: 14px;
+  border-bottom: 1px solid #eee;
+}
+
 .left {
   float: left;
 }
