--- a/style.css
+++ b/style.css
@@ -73,3 +73,17 @@ input:focus {
   border-top: 1px solid #eee;
   margin-top: 25px;
 }
+
+
+
+
+footer {
+  font-size: 12px;
+  text-align: center;
+  margin-top: 15px;
+}
+
+footer a {
+  text-decoration: none;
+  color: #c22;
+}
